--- a/geolocator/pubspec.yaml
+++ b/geolocator/pubspec.yaml
@@ -1,6 +1,8 @@
 name: geolocator
 description: Geolocation plugin for Flutter. This plugin provides a cross-platform (iOS, Android) API for generic location (GPS etc.) functions.
-version: 8.0.3+1
+homepage: https://github.com/Baseflow/flutter-geolocator/tree/master/geolocator
+author: zzb
+version: 8.0.3+2
 repository: https://github.com/Baseflow/flutter-geolocator/tree/master/geolocator
 issue_tracker: https://github.com/Baseflow/flutter-geolocator/issues?q=is%3Aissue+is%3Aopen
 
@@ -25,7 +27,12 @@ dependencies:
     sdk: flutter
   
   geolocator_platform_interface: ^4.0.0
-  geolocator_android: ^3.0.2
+  # geolocator_android: ^3.0.2
+  geolocator_android:
+    version: 3.0.2
+    hosted:
+      name: geolocator_android
+      url: http://flutter-pub.sf-express.com
   geolocator_apple: ^2.0.1
   geolocator_web: ^2.1.3
 
