--- a/geolocator/pubspec.yaml
+++ b/geolocator/pubspec.yaml
@@ -28,8 +28,14 @@ dependencies:
   
   geolocator_platform_interface: ^4.0.0
 #  geolocator_android: ^3.0.2
+  # 本地引用
   geolocator_android:
     path: ../geolocator_android
+
+#  geolocator_android:
+#    git:
+#      url: https://github.com/Super-Bin/flutter-geolocator.git
+#      ref: geolocator_v8.0.3_20220121
   geolocator_apple: ^2.0.1
   geolocator_web: ^2.1.3
 
