--- a/geolocator_android/example/pubspec.yaml
+++ b/geolocator_android/example/pubspec.yaml
@@ -10,9 +10,11 @@ environment:
 
 dependencies:
   baseflow_plugin_template:
-    git:
-      url: git://github.com/Baseflow/baseflow_plugin_template.git
-      ref: v2.1.0
+    path: ./baseflow_plugin_template-2.1.0
+#  baseflow_plugin_template:
+#    git:
+#      url: git://github.com/Baseflow/baseflow_plugin_template.git
+#      ref: v2.1.0
   flutter:
     sdk: flutter
 
