--- a/geolocator_android/pubspec.yaml
+++ b/geolocator_android/pubspec.yaml
@@ -25,6 +25,7 @@ dev_dependencies:
   async: ^2.8.2
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+#  flutter_lints: ^2.0.1
+  flutter_lints: ^1.0.4
   mockito: ^5.2.0
   plugin_platform_interface: ^2.1.2
