--- a/geolocator_android/pubspec.yaml
+++ b/geolocator_android/pubspec.yaml
@@ -3,6 +3,7 @@ description: Geolocation plugin for Flutter. This plugin provides the Android im
 repository: https://github.com/baseflow/flutter-geolocator/tree/main/geolocator_android
 issue_tracker: https://github.com/baseflow/flutter-geolocator/issues?q=is%3Aissue+is%3Aopen
 version: 4.1.3
+author: zzb
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
