--- a/geolocator/pubspec.yaml
+++ b/geolocator/pubspec.yaml
@@ -28,9 +28,12 @@ dependencies:
     sdk: flutter
 
   geolocator_platform_interface: ^4.0.3
-#  geolocator_android: ^4.1.3
+  #  geolocator_android: ^4.1.3
   geolocator_android:
-    path: ../geolocator_android
+    git:
+      url: https://github.com/Moonlightwsn/flutter-geolocator
+      ref: geolocator_v9.0.2_20230112
+      path: geolocator_android
   geolocator_apple: ^2.1.1+1
   geolocator_web: ^2.1.3
   geolocator_windows: ^0.1.0
